--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Monoton&family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Monoton&family=Montserrat:wght@500;600;700&family=Source+Code+Pro:wght@900&display=swap" rel="stylesheet">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
